# Parsy

./: Cargo.toml  README.md  rustfmt.toml
examples/: brainfuck.rs
src/: containers.rs  error.rs  input.rs  lib.rs  parser.rs  report.rs  span.rs  token.rs
src/parsers/: arc_late_init.rs  atoms.rs  chars.rs  container.rs  containers.rs  context.rs  custom.rs  helpers.rs  late.rs  late_init.rs  mod.rs  recursive.rs  to_define.rs  to_define_shared.rs
src/parsers/chainings/: and_then.rs  and_then_or_critical.rs  and_then_or_str.rs  and_then_str.rs  atomic_err.rs  critical.rs  custom_err.rs  debug.rs  delimited_by.rs  ensure_type.rs  fail.rs  fallible_map.rs  flattened.rs  followed_by.rs  full.rs  ignore_then.rs  labelled.rs  map.rs  map_consumed_str.rs  map_str.rs  mod.rs  not_followed_by.rs  or_not.rs  repeated.rs  separated_by.rs  silenced.rs  spanned.rs  surrounded_by.rs  then.rs  then_ignore.rs  to.rs  try_map.rs  validate.rs  validate_or_critical.rs  validate_or_dynamic_critical.rs  validate_with_message.rs
src/parsers/combinators/: choice.rs  lookahead.rs  mod.rs  not.rs  silent_choice.rs  static_ref.rs
src/parsers/contentless/: empty.rs  end.rs  mod.rs  start.rs
src/parsers/simples/: custom.rs  empty.rs  end.rs  filter.rs  lookahead.rs  mod.rs  start.rs
src/parsers/tails/: atomic_err.rs  collect_string.rs  critical.rs  debug.rs  flattened.rs  full.rs  mod.rs  or_not.rs  repeated.rs  silenced.rs  spanned.rs  static_ref.rs  string_collected.rs  to.rs  validate.rs  validate_or_critical.rs  (+1 more)
src/tests/: complex.rs  mod.rs
tests/: chars.rs  complex.rs  lazy.rs
(+19 files in other folders)
