[package]
name = "parsy"
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
description = "An easy-to-use, efficient parser combinators library"
repository = "https://github.com/ClementNerma/Parsy"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { optional = true, version = "1.0.186", features = ["derive"] }
