[package]
name = "parsy"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
description = "An easy-to-use, efficient parser combinators library"
repository = "https://github.com/ClementNerma/Parsy"

[features]
serde = ["dep:serde"]

[dependencies]
perfect-derive = "0.1.3"
serde = { optional = true, version = "1.0.193", features = ["derive"] }
