[package]
name = "parsy"
version = "0.14.4"
edition = "2024"
license = "Apache-2.0"
description = "An easy-to-use, efficient parser combinators library"
repository = "https://github.com/ClementNerma/Parsy"

[features]
serde = ["dep:serde"]
error-reporting = ["dep:annotate-snippets"]

[dependencies]
perfect-derive = "0.1.5"
serde = { optional = true, version = "1.0.219", features = ["derive"] }
annotate-snippets = { optional = true, version = "0.11.5" }
